added an open in media library button got svgs rendering removed the caching from the controller because it was causing errors changed coloured circles with emoji icons fixed incorrect appsettings

--- a/src/HCS.Media.DescriptionManager/wwwroot/HCS.Media.DescriptionManager/dashboard.html
+++ b/src/HCS.Media.DescriptionManager/wwwroot/HCS.Media.DescriptionManager/dashboard.html
@@ -34,6 +34,10 @@
                   ng-on-click="vm.save($index)">
                   Save description
                 </uui-button>
+                <uui-button class="btn btn-link" ng-on-click="vm.openMedia($index)">
+                  <umb-icon icon="icon-out"></umb-icon>
+                  <localize key="mediaPicker_openMedia">Open media</localize>
+                </uui-button>
               </div>
             </uui-form>
             <div ng-show="item.updated">
